[tool.poetry]
name = "raspberry-fiverr"
version = "0.1.0"
description = ""
authors = ["menamonmon"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tk = "^0.1.0"
Pillow = "^8.2.0"
ummalqura = "^2.0.1"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
